updated info and cleaned up scrollbar and other issues

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+body {
+  overflow-x: hidden;
+}
+
+body::-webkit-scrollbar {
+  display:none;
+}
